0.27.0 - Translation.parenthesizeBody and inlineAsNeeded now uses new surroundWith method